Archive2/80/3cda99817c5dea/output
main.cpp: In function 'int main()':
main.cpp:13:11: error: 'get_time' is not a member of 'std'
     ss >> std::get_time(&t, L"%Y-%b-%d %H:%M:%S"); // uses std::time_get<wchar_t>
           ^
